// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should filter list when search field contains a query 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "href": "#button",
          "initialOpen": true,
          "name": "Button",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "href": "#input",
          "initialOpen": true,
          "name": "Input",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "href": "#textarea",
          "initialOpen": true,
          "name": "Textarea",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
      ]
    }
  />
</Styled(TableOfContents)>
`;

exports[`should filter list when search field contains a query 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="but"
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": true,
          "heading": false,
          "href": "#button",
          "initialOpen": true,
          "name": "Button",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
      ]
    }
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "href": "#introduction",
          "initialOpen": true,
          "name": "Introduction",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
        Object {
          "components": Array [
            Object {
              "href": "#button",
              "name": "Button",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "href": "#button",
                  "initialOpen": true,
                  "name": "Button",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                },
              ]
            }
          />,
          "forcedOpen": false,
          "heading": true,
          "href": "#buttons",
          "initialOpen": true,
          "name": "Buttons",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
        Object {
          "components": Array [
            Object {
              "href": "#input",
              "name": "Input",
            },
            Object {
              "href": "#textarea",
              "name": "Textarea",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "href": "#input",
                  "initialOpen": true,
                  "name": "Input",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                },
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "href": "#textarea",
                  "initialOpen": true,
                  "name": "Textarea",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                },
              ]
            }
          />,
          "forcedOpen": false,
          "heading": true,
          "href": "#forms",
          "initialOpen": true,
          "name": "Forms",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
      ]
    }
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="frm"
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": true,
          "heading": false,
          "href": "#forms",
          "initialOpen": true,
          "name": "Forms",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
        },
      ]
    }
  />
</Styled(TableOfContents)>
`;
